[package]
name = "gamut"
description = "Space-efficient image encoding libraries — a unified API over per-format codecs, selected via Cargo features."
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
gamut-core.workspace = true

# Optional format crates, enabled via the features below.
gamut-avif = { workspace = true, optional = true }
gamut-jxl = { workspace = true, optional = true }
gamut-webp = { workspace = true, optional = true }
gamut-heic = { workspace = true, optional = true }
gamut-vvc = { workspace = true, optional = true }
gamut-av1 = { workspace = true, optional = true }
gamut-av2 = { workspace = true, optional = true }

# Optional image-metadata primitives (issue #34), re-exported behind the `metadata` feature.
gamut-ifd = { workspace = true, optional = true }
gamut-icc = { workspace = true, optional = true }

# Optional shared primitives, re-exported behind the `primitives` feature for
# tooling/sandbox use (e.g. gamut-cli); not needed for plain format encoding.
gamut-color = { workspace = true, optional = true }
gamut-dsp = { workspace = true, optional = true }
gamut-bitstream = { workspace = true, optional = true }

[features]
default = []
avif = ["dep:gamut-avif", "dep:gamut-av1"]
jxl = ["dep:gamut-jxl"]
webp = ["dep:gamut-webp"]
heic = ["dep:gamut-heic"]
vvc = ["dep:gamut-vvc"]
av1 = ["dep:gamut-av1"]
av2 = ["dep:gamut-av2"]
# Re-export the shared building blocks (`color`/`dsp`/`bitstream`) for tooling.
primitives = ["dep:gamut-color", "dep:gamut-dsp", "dep:gamut-bitstream"]
# Image metadata primitives (issue #34): the shared TIFF/IFD core plus the per-format crates
# (EXIF/XMP/ICC/IPTC) and the `gamut-metadata` facade. Crates are appended as each one lands.
metadata = ["dep:gamut-ifd", "dep:gamut-icc"]
all = ["avif", "jxl", "webp", "heic", "vvc", "av1", "av2", "primitives", "metadata"]
